--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			</nav>
 		</header>
 		<main>
-			<div class="container">
+			<section class="container">
 				<h1><span>Explorer</span> Paris</h1>
 				<div class="navigation">
 					<div class="block">
@@ -33,7 +33,7 @@
 					</div>
 					<div class="block">
 						<p>Activités</p>
-						<i class="fa-solid fa-ticket-simple"></i>
+						<i class="fas fa-ticket-simple"></i>
 					</div>
 					<div class="block">
 						<p>Locations de vacances</p>
@@ -49,7 +49,7 @@
 					</div>
 					<div class="block">
 						<p>Plus</p>
-						<i class="fa-solid fa-ellipsis"></i>
+						<i class="fas fa-ellipsis"></i>
 					</div>
 				</div>
 				<div class="photos">
@@ -100,7 +100,133 @@
 						<img src="./assets/img/maps_cnuhsr.png" alt="map" />
 					</div>
 				</div>
-			</div>
+			</section>
+			<section class="immanquables">
+				<h2>Paris : les immanquables</h2>
+
+				<div class="group">
+					<div class="lieux">
+					<h3>Se divertir</h3>
+					<p>
+						Des lieux à voir, des rues à explorer et des expériences
+						emblématiques à Paris.
+					</p>
+					<a href="/">Tout afficher</a>
+				</div>
+				<div class="caroussel">
+					<div class="caroussel-container">
+					<div class="caroussel-item">
+						<a href="/">
+						<img src="./assets/img/eiffeltoren.jpg" alt="tour-eiffel" />
+						<div class="text">
+							<h4>La Tour Eiffel</h4>
+							<p>
+								Tours et plateformes d'observation, Monuments & Points d'intérêt
+							</p>
+						</div></a>
+						<i class="fas fa-heart"></i>
+					</div>
+					<div class="caroussel-item">
+						<a href="/">
+						<img
+							src="./assets/img/cour-napoleon-et-pyramide.jpg"
+							alt="musée-du-louvre" />
+						<div class="text">
+							<h4>Musée du Louvre</h4>
+							<p>Bâtiments architecturaux, Musée d'art</p>
+						</div></a>
+						<i class="fas fa-heart"></i>
+					</div>
+					<div class="caroussel-item">
+						<a href="/">
+						<img
+							src="./assets/img/arc-de-triomphe-at-night.jpg"
+							alt="arc-de-triomphe" />
+						<div class="text">
+							<h4>Arc de Triomphe</h4>
+							<p>Bâtiments architectureaux, Sites historiques</p>
+						</div></a>
+						<i class="fas fa-heart"></i>
+					</div>
+					<div class="caroussel-item">
+						<a href="/">
+						<img
+							src="./assets/img/vue-de-la-cour-d-honneur.jpg"
+							alt="musée-Rodin" />
+						<div class="text">
+							<h4>Musée Rodin Parise</h4>
+							<p>Musées spécialisés</p>
+						</div></a>
+						<i class="fas fa-heart"></i>
+					</div>
+					<div class="caroussel-item">
+						<a href="/">
+						<img
+							src="./assets/img/the-bookstore.jpg"
+							alt="libriaire-Shakespeare" />
+						<div class="text">
+							<h4>Librairie Shakespeare ad Company Paris V</h4>
+							<p>bibliothèques, Grands Mmagasins</p>
+						</div></a>
+						<i class="fas fa-heart"></i>
+					</div>
+					<div class="caroussel-item">
+						<a href="/">
+						<img
+							src="./assets/img/leider-durch-das-feuer.jpg"
+							alt="Cathédral-Notre-Dame-Paris" />
+						<div class="text">
+							<h4>Cathédrale Notre-Dame de Paris</h4>
+							<p>Bâtiments architectureaux, Sites historiques</p>
+						</div></a>
+						<i class="fas fa-heart"></i>
+					</div>
+					<div class="caroussel-item">
+						<a href="/">
+						<img
+							src="./assets/img/20180601-122841-largejpg.jpg"
+							alt="musée-Orsay" />
+						<div class="text">
+							<h4>Musée d'Orsay</h4>
+							<p>Musées d'art</p>
+						</div></a>
+						<i class="fas fa-heart"></i>
+					</div>
+					<div class="caroussel-item">
+						<a href="/">
+						<img
+							src="./assets/img/marche-vernaison-maison.jpg"
+							alt="marche-aux-puces" />
+						<div class="text">
+							<h4>Marché aux puces de Saint Ouen</h4>
+							<p>Antiquaires, Marchés aux puces & Marchés de rue</p>
+						</div></a>
+						<i class="fas fa-heart"></i>
+					</div>
+					<div class="caroussel-item">
+						<a href="/">
+						<img
+							src="./assets/img/basilica-del-sagrado.jpg"
+							alt="sacré-coeur" />
+						<div class="text">
+							<h4>Basilique du Sacré-Coeur de Montmartre</h4>
+							<p>Eglises et Cathédrales</p>
+						</div></a>
+						<i class="fas fa-heart"></i>
+					</div>
+					<div class="caroussel-item">
+					<a href="/">
+						<img
+							src="./assets/img/jardin-des-tuileries.jpg"
+							alt="jardin-des-tuileries" />
+						<div class="text">
+							<h4>Jardin des Tuileries Paris I</h4>
+							<p>Jardin</p>
+						</div></a>
+						<i class="fas fa-heart"></i>
+					</div>
+				</div></div>
+			</section>
 		</main>
 	</body>
 </html>
