add media queries

--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Tripadvisor</title>
 		<link rel="stylesheet" href="./assets/css/reset.css" />
+		<link rel="stylesheet" href="./assets/css/fonts.css" />
 		<script
 			src="https://kit.fontawesome.com/e2824795d5.js"
 			crossorigin="anonymous"></script>
-		<link rel="stylesheet" href="./assets/css/fonts.css" />
+			<link rel="stylesheet" href="./assets/css/icons.css">
+		
 		<link rel="stylesheet" href="./assets/css/style.css" />
 	</head>
 	<body>
@@ -17,39 +19,47 @@
 				src="./assets/img/Tripadvisor_lockup_horizontal_secondary_registered.svg"
 				alt="logo-tripadvisor" />
 			<nav class="menu">
-				<a href="#"><i class="fas fa-pen"></i>Avis</a>
-				<a href="#"><i class="fas fa-heart"></i>Voyages</a>
-				<a href="#"><i class="fas fa-bell"></i>Alertes</a>
+				<a href="#"><i class="icon-pencil"></i>Avis</a>
+				<a href="#"><i class="icon-heart"></i>Voyages</a>
+				<a href="#"><i class="icon-alert"></i>Alertes</a>
 				<button id="connexion">Connectez-vous</button>
 			</nav>
 		</header>
 		<main>
 			<section class="container">
-				<h1><span>Explorer</span> Paris</h1>
+				<h1><span>Explorez</span> Paris</h1>
 				<div class="navigation">
 					<div class="block">
 						<p>Hôtels</p>
-						<i class="fas fa-hotel"></i>
+						<i class="icon-hotels"></i>
 					</div>
 					<div class="block">
 						<p>Activités</p>
-						<i class="fas fa-ticket-simple"></i>
+						<i class="icon-activities"></i>
 					</div>
 					<div class="block">
 						<p>Locations de vacances</p>
-						<i class="fas fa-house"></i>
+						<i class="icon-location"></i>
 					</div>
 					<div class="block">
 						<p>Restaurants</p>
-						<i class="fas fa-utensils"></i>
+						<i class="icon-restaurants"></i>
 					</div>
 					<div class="block">
 						<p>Forums de voyage</p>
-						<i class="fas fa-message"></i>
+						<i class="icon-forums"></i>
+					</div>
+					<div class="block">
+						<p>Vols</p>
+						<i class="icon-flights"></i>
+					</div>
+					<div class="block">
+						<p>Croisières</p>
+						<i class="icon-cruises"></i>
 					</div>
 					<div class="block">
 						<p>Plus</p>
-						<i class="fas fa-ellipsis"></i>
+						<i class="icon-plus"></i>
 					</div>
 				</div>
 				<div class="photos">
