--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
 			<link rel="stylesheet" href="./assets/css/icons.css">
 		
 		<link rel="stylesheet" href="./assets/css/style.css" />
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.1.3/axios.min.js"></script>
 	</head>
 	<body>
 		<header>
+			<div class="container">
 			<img
 				src="./assets/img/Tripadvisor_lockup_horizontal_secondary_registered.svg"
 				alt="logo-tripadvisor" />
@@ -23,10 +25,11 @@
 				<a href="#"><i class="icon-heart"></i>Voyages</a>
 				<a href="#"><i class="icon-alert"></i>Alertes</a>
 				<button id="connexion">Connectez-vous</button>
-			</nav>
+			</nav></div>
 		</header>
 		<main>
-			<section class="container">
+			<div class="container">
+			<section>
 				<h1><span>Explorez</span> Paris</h1>
 				<div class="navigation">
 					<div class="block">
@@ -237,6 +240,23 @@
 					</div>
 				</div></div>
 			</section>
+			</div>
 		</main>
+		<div class="modal">
+			<div class="form-container">
+				<div class="form">
+					<i class="icon-times"></i>
+					<p>Formulaire de contact</p>
+					<form id="contact-form">
+						<input type="text" name="firstname" id="firstname" placeholder="Prénom">
+						<input type="text" name="lastname" id="lastname" placeholder="Nom">
+						<input type="email" name="email" id="email" placeholder="Email">
+						<textarea name="message" id="message" rows="5" cows="50" placeholder="Écrivez ici votre message"></textarea>
+						<input type="submit" value="Envoyez le formulaire" id="submit-btn">
+					</form>
+				</div>
+			</div>
+		</div>
+		<script src="./assets/js/index.js"></script>
 	</body>
 </html>
